3.4.0
-----
1. Allow sorting playlist, and queue, on single field.
2. Add option to change highlight colour based upon current cover.

3.3.3
-----
1. Fix toggling of alarms by clicking on checkbox.
2. Fix toggling of continuous mode in random mix dialog.

3.3.2
-----
1. Fix browse view start-up when set to use grid.
2. Fix toggling of alarms.
3. Fix dropping external files onto queue.
4. Attempt to stop pressing 'Esc' whilst dragging causing browse view to
   navigate back.

3.3.1
-----
1. Fix 'Copy browse selection here'
2. Fix removing selected items from queue.
3. Only check for local files if 'Music and Artist Information' is installed.
4. Don't show tech info in desktop bottom bar if using large fonts and showing
   ratings - not enough space.
5. Ensure screensaver always starts in center.
6. Fix dropping from browse onto empty queue.

3.3.0
-----
 1. Material-3 like bottom navigation bar for mobile layout.
 2. Material-3 like switches.
 3. More rounded dialogs.
 4. Remove shadows from dialogs, volume popup, and menus.
 5. Less rounded chips.
 6. Add 'Kiosk' mode; hide all main menu items (except custom actions), and
    allow configuring which actions are available.
 7. Refactor volume handling to throttle volume change requests.
 8. Better layout of now playing when using very wide views.
 9. If sorting of favourites is enabled, then also sort 'Radio / My Presets'
10. Add some missing shortcut in tooltips.
11. Fix 'Esc' closing dialog and then parent dialog.
12. Better duplicate 'time' fix.
13. Strip HTML tags for browse item tooltips.
14. Handle text items (max 2 lines) when showing over 100 items in a list.
15. Only show total library duration if there are tracks in library.
16. Only show library last update date if valid.
17. Don't remove icons in favourites just because they are all the same.
18. Fix 'Play next' when invoked from header of multi-disc album.
20. When prompting to clear queue ask if all tracks, upcoming, or previous
    should be removed.