@@ -111,7 +111,7 @@ var lmsBrowse = Vue.component("lms-browse", {
     </div>
    </RecycleScroller>
 
-   <RecycleScroller v-else-if="useRecyclerForLists" :items="items" :item-size="LMS_LIST_ELEMENT_SIZE" page-mode key-field="id" :buffer="LMS_SCROLLER_LIST_BUFFER">
+   <RecycleScroller v-else-if="useRecyclerForLists" :items="items" :item-size="LMS_LIST_ELEMENT_SIZE+listSizeAdjust" page-mode key-field="id" :buffer="LMS_SCROLLER_LIST_BUFFER">
     <v-list-tile avatar @click="click(item, index, $event)" slot-scope="{item, index}" @dragstart="dragStart(index, $event)" @dragend="dragEnd()" @dragover="dragOver(index, $event)" @drop="drop(index, $event)" :draggable="item.draggable && (current.section!=SECTION_FAVORITES || 0==selection.size)" v-bind:class="{'browse-header' : item.header && item.header!=PLAIN_HEADER, 'list-active': (menu.show && index==menu.index) || (fetchingItem==item.id), 'drop-target':dragActive && index==dropIndex}" @contextmenu.prevent="contextMenu(item, index, $event)">
      <v-list-tile-avatar v-if="item.selected" :tile="true" class="lms-avatar">
       <v-icon>check_box</v-icon>
@@ -426,6 +426,9 @@ var lmsBrowse = Vue.component("lms-browse", {
         },
         drawBgndImage() {
             return this.$store.state.browseBackdrop && undefined!=this.current && undefined!=this.current.image
+        },
+        listSizeAdjust() {
+            return this.$store.state.listPadding
         }
     },
     created() {
