@@ -551,6 +551,10 @@ function setTheme(theme, color) {
     }
 }
 
+function setListPadding(padding) {
+    document.documentElement.style.setProperty('--list-padding', padding+'px');
+}
+
 function setLayout(useDesktop) {
     changeLink("html/css/" + (useDesktop ? "desktop" : "mobile") + ".css?r=" + LMS_MATERIAL_REVISION, "layoutcss");
     if (undefined==queryParams.css) {
